# dotenvy.ml

./: README.md  dotenvy.opam  dune-project  flake.nix
.github/workflows/: nix-build.yml  ocaml-doc.yml  test.yml
lib/: dotenvy.ml  dotenvy.mli  dune
test/: dune  overriding.env  preserving.env  simple.env  test_dotenvy.ml
